# greentic-runner

./: ...  .gitignore  Cargo.toml  README.md
.github/workflows/: auto-tag.yml  gen-bindings.yml  publish.yml  rust-ci.yml
ci/: local_check.sh
crates/greentic-host/src/: main.rs  pack.rs  telemetry.rs
crates/greentic-host/src/imports/: secrets.rs
crates/greentic-host/src/runner/: engine.rs  mod.rs
crates/greentic-runner/: Cargo.toml
crates/greentic-runner-desktop/: Cargo.toml
crates/greentic-runner-desktop/src/: lib.rs
crates/greentic-runner-host/: Cargo.toml  README.md
crates/greentic-runner-host/src/: activity.rs  boot.rs  config.rs  host.rs  ingress.rs  lib.rs  pack.rs  routing.rs  runtime.rs  runtime_wasmtime.rs  telemetry.rs  verify.rs  wasi.rs  watcher.rs
crates/greentic-runner-host/src/engine/: api.rs  builder.rs  error.rs  host.rs  mod.rs  policy.rs  registry.rs  runtime.rs  state_machine.rs
crates/greentic-runner-host/src/engine/glue/: legacy_adapter_bridge.rs  secrets_bridge.rs  telemetry_bridge.rs
crates/greentic-runner-host/src/http/: admin.rs  auth.rs  health.rs
crates/greentic-runner-host/src/imports/: mod.rs
crates/greentic-runner-host/src/runner/: adapt_messaging.rs  adapt_slack.rs  adapt_teams.rs  adapt_timer.rs  adapt_webchat.rs  adapt_webex.rs  adapt_webhook.rs  adapt_whatsapp.rs  engine.rs  ingress_util.rs  mod.rs
crates/greentic-runner-host/src/storage/: mod.rs  session.rs  state.rs
crates/greentic-runner-new/: Cargo.toml
crates/greentic-runner-new/src/: api.rs  builder.rs  host.rs  lib.rs  policy.rs  registry.rs  state_machine.rs
crates/greentic-runner-new/src/glue/: legacy_adapter_bridge.rs  secrets_bridge.rs  telemetry_bridge.rs
crates/greentic-runner-new/src/shims/: session_shim.rs  state_shim.rs
crates/greentic-runner/src/: lib.rs  main.rs
crates/greentic-runner/src/gen_bindings/: component.rs  mod.rs
crates/greentic-runner/tests/: gen_bindings.rs
crates/greentic-secrets/: Cargo.toml
crates/greentic-secrets/src/: lib.rs
crates/greentic-secrets/tests/: backend.rs
crates/host/: Cargo.toml
crates/host/examples/: run_demo.rs
crates/host/src/: config.rs  desktop.rs  lib.rs  main.rs  pack.rs  runtime_wasmtime.rs  telemetry.rs  verify.rs
crates/host/src/glue/: legacy_adapter_bridge.rs  mod.rs  secrets_bridge.rs  telemetry_bridge.rs
crates/host/src/imports/: http.rs  mod.rs  telemetry.rs
crates/host/src/newrunner/: api.rs  builder.rs  host.rs  mod.rs  policy.rs  registry.rs  state_machine.rs
crates/host/src/newrunner/shims/: mod.rs  session_shim.rs  state_shim.rs
crates/host/src/runner/: adapt_messaging.rs  adapt_timer.rs  adapt_webhook.rs  engine.rs  mocks.rs  mod.rs
crates/host/tests/: newrunner_state_machine.rs
crates/runner-core/: Cargo.toml  README.md
crates/runner-core/examples/: resolve_fs.rs
crates/runner-core/src/: env.rs  lib.rs
crates/runner-core/src/packs/: cache.rs  index.rs  mod.rs  verify.rs
crates/runner-core/src/packs/resolver/: azblob.rs  fs.rs  gcs.rs  http.rs  mod.rs  oci.rs  s3.rs
crates/runner-core/tests/: pack_manager.rs
crates/tests/: Cargo.toml
crates/tests/tests/: host_integration.rs  host_wasi_p2_roundtrip.rs  multiturn.rs  weather_smoke.rs  webhook_timer.rs
examples/: index.json
examples/bindings/: default.bindings.yaml
examples/packs/: demo.gtpack
scripts/: version-tools.sh
test/: README.md  pack.yaml
test/flows/: welcome.ygtc
test/scripts/: build.sh
tests/fixtures/: demo.gtpack
tests/fixtures/gen-bindings/weather-demo/: bindings.complete.yaml  pack.yaml
tests/fixtures/gen-bindings/weather-demo-strict/: bindings.hints.yaml
tests/fixtures/gen-bindings/weather-demo/flows/: weather_bot.ygtc
tests/fixtures/wasi-p2-smoke/: Cargo.toml
tests/fixtures/wasi-p2-smoke/src/: main.rs
