[workspace]
members = [
    "crates/host",
    "crates/tests",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.2.0"

[workspace.dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["macros", "json"] }
clap = { version = "4.5", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
ed25519-dalek = { version = "2", features = ["pkcs8"] }
futures = "0.3"
greentic-flow = "0.2"
greentic-interfaces = "0.4"
greentic-mcp = { package = "mcp-exec", version = "0.2" }
greentic-types = { version = "0.2", features = ["telemetry-autoinit"] }
hex = "0.4"
lru = "0.16"
once_cell = "1.18"
parking_lot = "0.12"
rand = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serde_yaml_bw = "2.5"
sha2 = "0.10"
thiserror = "2.0"
time = { version = "0.3", features = ["macros", "serde-well-known"] }
tokio = { version = "1.48", features = ["rt-multi-thread", "macros", "rt", "signal", "time", "net", "sync", "fs"] }
tokio-util = "0.7"
tower = "0.5"
tracing = "0.1"
wasmparser = "0.240"
cron = "0.15"
handlebars = "6"
