[workspace]
members = [
    "crates/greentic-runner",
    "crates/greentic-runner-host",
    "crates/greentic-runner-desktop",
    "crates/tests",
    "crates/runner-core",
    "crates/greentic-secrets",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.3.9"

[workspace.dependencies]
arc-swap = "1.7"
async-trait = "0.1"
anyhow = "1"
axum = { version = "0.8", features = ["macros", "json"] }
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
ed25519-dalek = { version = "2", features = ["pkcs8"] }
futures = "0.3"
greentic-flow = "0.3"
greentic-interfaces = "0.4"
greentic-mcp = { package = "mcp-exec", version = "0.3" }
greentic-types = { version = "0.3", features = ["telemetry-autoinit"] }
greentic-pack = { version = "0.3" }
greentic-session = "0.3"
greentic-state = "0.3"
hex = "0.4"
humantime = "2.1"
lru = "0.16"
once_cell = "1.18"
parking_lot = "0.12"
rand = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serde_yaml_bw = "2.5"
serde_cbor = "0.11"
sha2 = "0.10"
thiserror = "2.0"
time = { version = "0.3", features = ["macros", "serde-well-known"] }
tokio = { version = "1.48", features = ["rt-multi-thread", "macros", "rt", "signal", "time", "net", "sync", "fs"] }
tokio-util = "0.7"
tower = "0.5"
tracing = "0.1"
wasmparser = "0.240"
cron = "0.15"
handlebars = "6"
uuid = { version = "1", features = ["v4"] }
url = "2"
zip = { version = "6", default-features = false, features = ["deflate"] }
indexmap = "2"
bytes = "1"
