[package]
name = "greentic-runner-desktop"
version.workspace = true
edition = "2024"
description = "Developer desktop runner harness for Greentic packs"
license = "MIT"
homepage = "https://github.com/greentic-ai/greentic-runner"
repository = "https://github.com/greentic-ai/greentic-runner"

[dependencies]
anyhow.workspace = true
greentic-runner-host = { path = "../greentic-runner-host", version = "0.3.0", features = ["mcp", "telemetry"] }
greentic-pack.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml_bw.workspace = true
time.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
zip.workspace = true
