[package]
name = "greentic-runner-host"
version = "0.3.0"
edition = "2024"
license = "MIT"
description = "Host runtime shim for Greentic runner: config, pack loading, activity handling"
repository = "https://github.com/greentic-ai/greentic-runner"
readme = "README.md"
keywords = ["greentic", "runner", "wasmtime", "mcp", "flows"]
categories = ["asynchronous", "api-bindings", "command-line-utilities"]

[features]
default = ["verify"]
telemetry = ["dep:greentic-telemetry"]
verify = []
mcp = ["dep:greentic_mcp"]

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
cron.workspace = true
greentic-flow.workspace = true
greentic-interfaces.workspace = true
greentic-pack.workspace = true
greentic-types.workspace = true
handlebars.workspace = true
hex.workspace = true
indexmap.workspace = true
lru.workspace = true
parking_lot.workspace = true
rand.workspace = true
reqwest.workspace = true
serde = { workspace = true }
serde_cbor.workspace = true
serde_json.workspace = true
serde_yaml_bw.workspace = true
sha2.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
wasmparser.workspace = true
zip.workspace = true

# External stack components
greentic_mcp = { package = "mcp-exec", version = "0.3", optional = true }
wasmtime = { version = "38", default-features = false, features = ["component-model", "cranelift", "runtime", "std"] }
greentic-telemetry = { version = "0.3", optional = true }
