[package]
name = "greentic-runner-host"
version.workspace = true
edition.workspace = true
license = "MIT"
description = "Host runtime shim for Greentic runner: config, pack loading, activity handling"
homepage = "https://github.com/greentic-ai/greentic-runner"
repository = "https://github.com/greentic-ai/greentic-runner"
readme = "README.md"
keywords = ["greentic", "runner", "wasmtime", "mcp", "flows"]
categories = ["asynchronous", "api-bindings", "command-line-utilities"]

[features]
default = ["verify"]
telemetry = ["dep:greentic-telemetry"]
verify = []
mcp = ["dep:greentic_mcp"]

[dependencies]
async-trait = "0.1"
anyhow.workspace = true
arc-swap.workspace = true
axum.workspace = true
base64.workspace = true
chrono.workspace = true
greentic-flow.workspace = true
greentic-interfaces.workspace = true
greentic-pack.workspace = true
greentic-types.workspace = true
greentic-session.workspace = true
greentic-state.workspace = true
greentic-secrets = { version = "0.3.6", path = "../greentic-secrets" }
handlebars.workspace = true
hex.workspace = true
humantime.workspace = true
indexmap.workspace = true
lru.workspace = true
parking_lot.workspace = true
rand.workspace = true
reqwest.workspace = true
runner-core = { version = "0.3.6", path = "../runner-core" }
serde = { workspace = true }
serde_cbor.workspace = true
serde_json.workspace = true
serde_yaml_bw.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
time.workspace = true
tracing.workspace = true
url.workspace = true
wasmparser.workspace = true
zip.workspace = true
bytes.workspace = true
futures.workspace = true
hmac = "0.12"
sha1 = "0.10"

# External stack components
greentic_mcp = { package = "mcp-exec", version = "0.3", optional = true }
wasmtime = { version = "38", default-features = false, features = ["component-model", "cranelift", "runtime", "std"] }
wasmtime-wasi = { version = "38", default-features = false, features = ["p2"] }
greentic-telemetry = { version = "0.3", optional = true }
