[package]
name = "greentic-runner"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Greentic runner binaries and re-exported host/new-runner APIs"
homepage = "https://github.com/greentic-ai/greentic-runner"
repository = "https://github.com/greentic-ai/greentic-runner"
documentation = "https://docs.rs/greentic-runner"
readme = "../../README.md"
keywords = ["greentic", "agent", "runner", "wasm", "mcp"]
categories = ["wasm", "command-line-utilities", "network-programming"]

[features]
default = ["legacy-host"]
legacy-host = []
new-runner = ["dep:greentic-runner-new"]
redis = []
schema = []

[dependencies]
anyhow.workspace = true
clap.workspace = true
greentic-runner-host = { path = "../greentic-runner-host", version = "0.3.0", features = ["mcp"] }
greentic-runner-desktop = { path = "../greentic-runner-desktop", version = "0.3.0" }
greentic-runner-new = { path = "../greentic-runner-new", version = "0.3.0", optional = true }
greentic-types.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true

[lib]
name = "greentic_runner"
path = "src/lib.rs"

[[bin]]
name = "greentic-runner"
path = "src/main.rs"
required-features = ["legacy-host"]

[[bin]]
name = "greentic-runner-cli"
path = "src/bin/greentic-runner-cli.rs"
required-features = ["new-runner"]
