[package]
name = "greentic-runner"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Greentic runner binaries and re-exported host/new-runner APIs"
homepage = "https://github.com/greentic-ai/greentic-runner"
repository = "https://github.com/greentic-ai/greentic-runner"
documentation = "https://docs.rs/greentic-runner"
readme = "../../README.md"
keywords = ["greentic", "agent", "runner", "wasm", "mcp"]
categories = ["wasm", "command-line-utilities", "network-programming"]

[features]
default = ["legacy-host"]
legacy-host = []
redis = []
schema = []

[dependencies]
anyhow.workspace = true
clap.workspace = true
greentic-runner-host = { path = "../greentic-runner-host", version = "0.3.0", features = ["mcp"] }
greentic-runner-desktop = { path = "../greentic-runner-desktop", version = "0.3.0" }
greentic-types.workspace = true
humantime.workspace = true
runner-core = { path = "../runner-core" }
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true

[lib]
name = "greentic_runner"
path = "src/lib.rs"

[[bin]]
name = "greentic-runner"
path = "src/main.rs"
required-features = ["legacy-host"]
