[package]
name = "greentic-runner"
version.workspace = true
edition.workspace = true
license = "MIT"
description = "Greentic runner binaries and re-exported host/new-runner APIs"
homepage = "https://github.com/greentic-ai/greentic-runner"
repository = "https://github.com/greentic-ai/greentic-runner"
documentation = "https://docs.rs/greentic-runner"
readme = "../../README.md"
keywords = ["greentic", "agent", "runner", "wasm", "mcp"]
categories = ["wasm", "command-line-utilities", "network-programming"]

[features]
default = ["legacy-host"]
legacy-host = []
redis = []
schema = []

[dependencies]
anyhow.workspace = true
clap.workspace = true
greentic-runner-host = { path = "../greentic-runner-host", version = "0.3.6", features = ["mcp"] }
greentic-runner-desktop = { path = "../greentic-runner-desktop", version = "0.3.6" }
greentic-types.workspace = true
humantime.workspace = true
runner-core = { path = "../runner-core", version = "0.3.6" }
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
serde_yaml = "0.9"
serde = { version = "1.0", features = ["derive"] }
wasmparser = "0.90"
url = "2"

[lib]
name = "greentic_runner"
path = "src/lib.rs"

[[bin]]
name = "greentic-runner"
path = "src/main.rs"
required-features = ["legacy-host"]

[[bin]]
name = "greentic-gen-bindings"
path = "src/bin/gen_bindings.rs"
