[package]
name = "greentic-runner"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Greentic pack runner with Telegram messaging adapter and node dispatcher."
homepage = "https://github.com/greentic-ai/greentic-runner"
repository = "https://github.com/greentic-ai/greentic-runner"
documentation = "https://docs.rs/greentic-runner"
readme = "../../README.md"
keywords = ["greentic", "agent", "runner", "wasm", "mcp"]
categories = ["wasm", "command-line-utilities", "network-programming"]

[dependencies]
anyhow.workspace = true
axum.workspace = true
clap.workspace = true
chrono.workspace = true
ed25519-dalek.workspace = true
futures.workspace = true
greentic-flow.workspace = true
greentic-interfaces.workspace = true
greentic-mcp.workspace = true
greentic-telemetry.workspace = true
greentic-types.workspace = true
handlebars.workspace = true
hex.workspace = true
lru.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml_bw.workspace = true
sha2.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tower.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
wasmparser.workspace = true
wasmtime.workspace = true
wasmtime-wasi.workspace = true
cron.workspace = true

[dev-dependencies]
anyhow.workspace = true
reqwest.workspace = true
serde_json.workspace = true
tokio.workspace = true
