[package]
name = "greentic-runner"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Greentic pack runner with Telegram messaging adapter and node dispatcher."
homepage = "https://github.com/greentic-ai/greentic-runner"
repository = "https://github.com/greentic-ai/greentic-runner"
documentation = "https://docs.rs/greentic-runner"
readme = "../../README.md"
keywords = ["greentic", "agent", "runner", "wasm", "mcp"]
categories = ["wasm", "command-line-utilities", "network-programming"]

[features]
default = ["legacy-host", "stable-wasmtime"]
legacy-host = []
new-runner = []
stable-wasmtime = ["wasmtime_stable", "wasmtime_wasi_stable"]
nightly-wasmtime = ["greentic-interfaces-wasmtime", "wasmtime_nightly", "wasmtime_wasi_nightly"]
redis = []
schema = []

[dependencies]
anyhow.workspace = true
axum.workspace = true
clap.workspace = true
chrono.workspace = true
ed25519-dalek.workspace = true
futures.workspace = true
greentic-flow.workspace = true
greentic-interfaces.workspace = true
greentic-mcp.workspace = true
greentic-session = { version = "0.1", default-features = true, optional = true }
greentic-state = { version = "0.1", default-features = true, optional = true }
greentic-telemetry.workspace = true
greentic-types.workspace = true
async-trait = "0.1"
handlebars.workspace = true
hex.workspace = true
lru.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml_bw.workspace = true
sha2.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tower.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
wasmparser.workspace = true
cron.workspace = true
greentic-interfaces-wasmtime = { version = "0.1", optional = true }
wasmtime_stable = { package = "wasmtime", version = ">=29,<38", optional = true }
wasmtime_wasi_stable = { package = "wasmtime-wasi", version = ">=29,<38", optional = true }
wasmtime_nightly = { package = "wasmtime", version = ">=29,<38", optional = true }
wasmtime_wasi_nightly = { package = "wasmtime-wasi", version = ">=29,<38", optional = true }

[dev-dependencies]
anyhow.workspace = true
reqwest.workspace = true
serde_json.workspace = true
tokio.workspace = true

[[bin]]
name = "greentic-runner"
path = "src/main.rs"
required-features = ["legacy-host"]

[[bin]]
name = "greentic-runner-cli"
path = "src/bin/greentic-runner-cli.rs"
required-features = ["new-runner"]
