[package]
name = "runner-core"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
base64 = "0.22"
blake3 = "1"
ed25519-dalek.workspace = true
greentic-pack.workspace = true
reqwest.workspace = true
semver = "1"
serde = { workspace = true }
serde_json.workspace = true
sha2.workspace = true
tempfile = "3"
url.workspace = true

[dev-dependencies]
tiny_http = "0.12"
